SJB 2012-10-02:
PLATEMERGE: removed Z_PERSON, CLASS_PERSON, Z_CONF_PERSON,
    COMMENTS_PERSON from spAll so that quasar catalogs can proceed on
    timescale indepdenent of pipeline.  DRxQ will be authoritative
    source of FPG scans rather than also propagating to spAll.
SPECTRO_SUMMARY: removed N_QSO_SCANNED, N_LYA_INCOMP, and N_LYA_IMPURE
    statistics.
 
PLATELIST: Change defult input/output location to be in RUN2D subdir
    to make it easier to work with multiple versions.  Can be overriden
    with TOPDIR and OUTDIR options, and multiple RUN2D versions can
    still be combined into a single platelist using RUN2D='*' or
    RUN2D=[x, y, z], in which case the platelist is written to
    $BOSS_SPECTRO_REDUX (not in the RUN2D subdir).

BBSPEC_EXTRACT: bbspec ymodel moved to HDU 6 in extracted spectra.
BOSSLOG: New proc.
COMBINEBPM: updated hand edited bad columns  (ticket 1424, MDO)
FLUX_DISTORTION: mask CALIB_STATUS->ASTROMBAD fluxes
  (ticket #1583, ASB)
READPLUGMAP: append CALIB_STATUS when /calibobj is passed
  (ticket #1583, ASB)
SDSS_PLATE_SORT: Adding ERROR to error messages for easier grepping
SDSSPROC: added masking for hotpixel trails (MDO)
SN_MEDIAN: Added "sn_all" keyword for median S/N across all bands
  (ticket #1634, ASB)
SPREDUCE1D: push CALIB_STATUS->ASTROMBAD to ZWARNING->BAD_TARGET
  (ticket #1583, ASB)
SPREDUCE1D: Added SN_MEDIAN_ALL (median S/N across all bands) to
  output structure (ticket #1634, ASB).

-------------------------------------------------------------------------------
v5_5_10 (2012-08-21)

BOLTON_BIASSUB: Bug fix for CRs in row-by-row kluge-processed overscan
    region of wonky b2 quadrant (ASB, ticket #1651).
QUICKTRACE: Bug fix for SOS reductions, which now need to pass cartID
    as a keyword to TRACE320CRUDE to be consistent with recent changes
    (ticket #1656).

-------------------------------------------------------------------------------
v5_5_9 (2012-08-15)
Tag for electronics bias drift on b2 UR quadrant.